syntax = "proto3";

package tnc.agent;

option go_package = "github.com/clonealpha/esba-tnc-api/proto/vpp";

// TncAgent 서비스 정의
service TncAgent {
  // 조회 기능 (Unary RPC)
  rpc CollectInterfaces(CollectRequest) returns (InterfaceList);
  rpc CollectNeighbors(CollectRequest) returns (NeighborList);
  rpc CollectFIB(CollectRequest) returns (FIBList);
  rpc CollectACL(CollectRequest) returns (ACLList);
  rpc CollectMemif(CollectRequest) returns (MemifList);
  rpc CollectSRv6(CollectRequest) returns (SRv6List);
  rpc CollectVersion(CollectRequest) returns (VersionInfo);
  rpc CollectHardware(CollectRequest) returns (HardwareInfo);
  rpc CollectIPAddresses(CollectRequest) returns (IPAddressList);
  rpc CollectL2FIB(CollectRequest) returns (L2FIBList);
  rpc CollectBridgeDomains(CollectRequest) returns (BridgeDomainList);
  rpc CollectVXLAN(CollectRequest) returns (VXLANList);
  rpc CollectUPFApplications(CollectRequest) returns (UPFApplicationList);
  rpc CollectUPFNWI(CollectRequest) returns (UPFNWIList);
  rpc CollectUPFPFCPEndpoints(CollectRequest) returns (UPFPFCPEndpointList);
  rpc CollectUPFPolicies(CollectRequest) returns (UPFPolicyList);
  rpc CollectUPFNATPools(CollectRequest) returns (UPFNATPoolList);
  rpc CollectBFD(CollectRequest) returns (BFDList);
  
  // 헬스 체크
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  
  // 이벤트 스트리밍 (Server Streaming)
  rpc WatchEvents(WatchRequest) returns (stream Event);
}

// 요청 메시지
message CollectRequest {
  string resource = 1;
}

message WatchRequest {
  repeated string event_types = 1; // ["interface", "neighbor", "bfd"]
}

message HealthCheckRequest {
  // 빈 메시지
}

// 응답 메시지
message HealthCheckResponse {
  string status = 1;
  string service = 2;
  string timestamp = 3;
}

// 이벤트 메시지
message Event {
  string type = 1;  // "interface", "neighbor", "bfd"
  int64 timestamp = 2;
  bytes data = 3;   // JSON 형식의 이벤트 데이터
}

// Interface 관련 메시지
message InterfaceList {
  repeated Interface interfaces = 1;
}

message Interface {
  uint32 sw_if_index = 1;
  string interface_name = 2;
  bool admin_up = 3;
  bool link_up = 4;
  uint32 l3_up = 5;
  uint32 flags = 6;
  string tag = 7;
  uint32 link_speed = 8;  // 최대 대역폭 (Mbps, 0이면 미지원/미노출)
}

// Neighbor 관련 메시지
message NeighborList {
  repeated Neighbor neighbors = 1;
}

message Neighbor {
  string ip_address = 1;
  string mac_address = 2;
  uint32 sw_if_index = 3;
  bool is_static = 4;
  bool is_ipv6 = 5;
}

// FIB 관련 메시지
message FIBList {
  repeated FIBEntry entries = 1;
}

message FIBEntry {
  string prefix = 1;
  uint32 sw_if_index = 2;
  string next_hop = 3;
  uint32 weight = 4;
  uint32 preference = 5;
}

// ACL 관련 메시지
message ACLList {
  repeated ACLEntry entries = 1;
}

message ACLEntry {
  uint32 acl_index = 1;
  string tag = 2;
  uint32 count = 3;
}

// Memif 관련 메시지
message MemifList {
  repeated MemifEntry entries = 1;
}

message MemifEntry {
  uint32 sw_if_index = 1;
  string socket_filename = 2;
  uint32 id = 3;
  bool role = 4;
  uint32 mode = 5;
  uint32 ring_size = 6;
  uint32 buffer_size = 7;
}

// SRv6 관련 메시지
message SRv6List {
  repeated SRv6Entry entries = 1;
}

message SRv6Entry {
  string sid = 1;
  uint32 behavior = 2;
  uint32 sw_if_index = 3;
  uint32 fib_table = 4;
}

// Version 관련 메시지
message VersionInfo {
  string program = 1;
  string version = 2;
  string build_date = 3;
  string build_directory = 4;
}

// Hardware 관련 메시지
message HardwareInfo {
  string info = 1;  // CLI 출력 결과 (문자열)
}

// IP Address 관련 메시지
message IPAddressList {
  repeated IPAddressEntry entries = 1;
}

message IPAddressEntry {
  string prefix = 1;      // 예: "192.168.1.1/24"
  uint32 sw_if_index = 2;
}

// L2 FIB 관련 메시지
message L2FIBList {
  repeated L2FIBEntry entries = 1;
}

message L2FIBEntry {
  uint32 bd_id = 1;
  string mac = 2;         // MAC 주소 문자열
  uint32 sw_if_index = 3;
}

// Bridge Domain 관련 메시지
message BridgeDomainList {
  repeated BridgeDomainEntry entries = 1;
}

message BridgeDomainEntry {
  uint32 bd_id = 1;
  repeated string flags = 2;  // ["flood", "forward", "learn", ...]
  uint32 n_sw_ifs = 3;        // 연결된 인터페이스 수
}

// VXLAN 관련 메시지
message VXLANList {
  repeated VXLANEntry entries = 1;
}

message VXLANEntry {
  uint32 sw_if_index = 1;
  string src = 2;         // 소스 IP 주소
  string dst = 3;         // 목적지 IP 주소
  uint32 vni = 4;         // VXLAN Network Identifier
}

// UPF 관련 메시지
message UPFApplicationList {
  repeated UPFApplication applications = 1;
}

message UPFApplication {
  string name = 1;
  uint32 flags = 2;
}

message UPFNWIList {
  repeated UPFNWI nwis = 1;
}

message UPFNWI {
  uint32 ip4_table_id = 1;
  uint32 ip6_table_id = 2;
  string ipfix_collector_ip = 3;
  uint32 ipfix_report_interval = 4;
  uint32 observation_domain_id = 5;
  uint64 observation_point_id = 6;
  string nwi = 7;
}

message UPFPFCPEndpointList {
  repeated UPFPFCPEndpoint endpoints = 1;
}

message UPFPFCPEndpoint {
  uint32 table_id = 1;
  string ip = 2;
}

message UPFPolicyList {
  repeated UPFPolicy policies = 1;
}

message UPFPolicy {
  string identifier = 1;
  // paths는 복잡한 구조체 배열이므로 나중에 확장 가능
}

message UPFNATPoolList {
  repeated UPFNATPool pools = 1;
}

message UPFNATPool {
  string name = 1;
  uint32 block_size = 2;
  uint32 max_users = 3;
  uint32 current_users = 4;
  string nwi = 5;
}

// BFD 관련 메시지
message BFDList {
  repeated BFDSession sessions = 1;
}

message BFDSession {
  uint32 sw_if_index = 1;
  string local_addr = 2;
  string peer_addr = 3;
  string state = 4;  // "ADMIN_DOWN", "DOWN", "INIT", "UP"
  bool is_authenticated = 5;
  uint32 bfd_key_id = 6;
  uint32 conf_key_id = 7;
  uint32 required_min_rx = 8;
  uint32 desired_min_tx = 9;
  uint32 detect_mult = 10;
  bool is_ipv6 = 11;
}
